feat: add bonus

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "ratio": "c",
     "cursor.h": "c",
     "envp.h": "c",
-    "typeinfo": "c"
+    "typeinfo": "c",
+    "minishell_bonus.h": "c"
   }
 }
