--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,8 @@
       "label": "build minishell",
       "command": "/usr/bin/make",
       "args": [
-        "re"
+        "fclean",
+        "bonus"
       ],
       "options": {
         "cwd": "${workspaceFolder}",
